Visualization - add Wayland_Window
DRAFT

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -367,7 +367,8 @@ if (WIN32 OR ANDROID OR IOS OR EMSCRIPTEN)
 elseif (APPLE)
   set (USE_XLIB OFF CACHE BOOL "${USE_XLIB_DESCR}")
 else()
-  set (USE_XLIB ON  CACHE BOOL "${USE_XLIB_DESCR}")
+  set (USE_XLIB    ON CACHE BOOL "${USE_XLIB_DESCR}")
+  set (USE_WAYLAND ON CACHE BOOL "${USE_WAYLAND_DESCR}")
 endif()
 
 if (WIN32)
@@ -482,6 +483,7 @@ OCCT_IS_PRODUCT_REQUIRED (CSF_FreeImagePlus CAN_USE_FREEIMAGE)
 OCCT_IS_PRODUCT_REQUIRED (CSF_TclLibs USE_TCL)
 OCCT_IS_PRODUCT_REQUIRED (CSF_TclTkLibs CAN_USE_TK)
 OCCT_IS_PRODUCT_REQUIRED (CSF_XwLibs CAN_USE_XLIB)
+OCCT_IS_PRODUCT_REQUIRED (CSF_wayland CAN_USE_WAYLAND)
 OCCT_IS_PRODUCT_REQUIRED (CSF_FREETYPE CAN_USE_FREETYPE)
 OCCT_IS_PRODUCT_REQUIRED (CSF_OpenGlLibs CAN_USE_OPENGL)
 OCCT_IS_PRODUCT_REQUIRED (CSF_OpenGlesLibs CAN_USE_GLES2)
@@ -526,6 +528,16 @@ if (CAN_USE_XLIB)
   endif()
 else()
   OCCT_CHECK_AND_UNSET ("USE_XLIB")
+endif()
+
+# wayland
+if (CAN_USE_WAYLAND)
+  if (USE_WAYLAND)
+    message (STATUS "Info: Wayland is used by OCCT")
+    add_definitions (-DHAVE_WAYLAND)
+  endif()
+else()
+  OCCT_CHECK_AND_UNSET ("USE_WAYLAND")
 endif()
 
 # FreeType
